--- a/pay.html
+++ b/pay.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=divice-width">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/elastic_grid.min.css">
+  <link rel="stylesheet" href="css/pay.css">
   <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Raleway" rel="stylesheet">
 
   <title>Renter</title>
@@ -94,6 +95,111 @@
 
 
   </div>
+
+  <br> <br><br>
+
+  <div class="main-gallery">
+    <div class="row gallery ">
+      <h2>Special Products</h2>
+      <br>
+      <div class="col-md-3">
+        <div class="content">
+          <img src="images/nikearmyg.jpg">
+          <h3>Nike Army Green</h3>
+          <p>This is a limited edition baby!</p>
+          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="content">
+          <img src="images/nikearmyg.jpg">
+          <h3>Nike Army Green</h3>
+          <p>This is a limited edition baby!</p>
+          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+        </div>
+      </div>
+
+      <div class="col-md-3">
+
+        <div class="content">
+          <img src="images/nikearmyg.jpg">
+          <h3>Nike Army Green</h3>
+          <p>This is a limited edition baby!</p>
+          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="content">
+          <img src="images/nikearmyg.jpg">
+          <h3>Nike Army Green</h3>
+          <p>This is a limited edition baby!</p>
+          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+        </div>
+      </div>
+
+      <div class="row gallery">
+        <div class="col-md-3">
+          <div class="content">
+            <img src="images/nikearmyg.jpg">
+            <h3>Nike Army Green</h3>
+            <p>This is a limited edition baby!</p>
+            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-3">
+
+          <div class="content">
+            <img src="images/nikearmyg.jpg">
+            <h3>Nike Army Green</h3>
+            <p>This is a limited edition baby!</p>
+            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-3">
+
+          <div class="content">
+            <img src="images/nikearmyg.jpg">
+            <h3>Nike Army Green</h3>
+            <p>This is a limited edition baby!</p>
+            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-3">
+
+          <div class="content">
+            <img src="images/nikearmyg.jpg">
+            <h3>Nike Army Green</h3>
+            <p>This is a limited edition baby!</p>
+            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+  <br><br>
 
   <form class="form-class" action="index.html" method="post">
     <div class="container signup-con">
@@ -235,6 +341,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/modernizr.custom.js"></script>
+
+  <script src="js/classie.js"></script>
+
+  <script type="text/javascript" src="js/elastic_grid.js"></script>
 </body>
 
 </html>
