delete jumbotron and replaced with header

--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
   <title> Rent a Shoe </title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </head>
 <body>
-  <div class="jumbotron">
-  <div class="container text-center">
-    <h1>Rent a Shoe</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-  </div>
+
+<div class="container-fluid">
+  <header>
+  <section class="header-content" id="hea">
+    <h1 class="header-title">RENT A SHOE</h1>
+    <h4 class="header-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h4>
+    <p class="header-button"><a href="#" class="button">ENJOY SHOPPING</a></p>
+  </section>
+  </header>
 </div>
 
 <nav class="navbar navbar-pills">
@@ -39,6 +45,8 @@
 
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
         </ol>
         <div class="carousel-inner">
             <div class="item active">
@@ -59,10 +67,12 @@
 </div>
 </div>
 
-<div class="section about">
+<div class="section">
   <div class="container">
+    <div class="well">
   <h2>About Rent a Shoe</h3>
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia massa orci, eget pellentesque purus hendrerit sed. Ut in ex mauris. Sed porttitor risus vitae est aliquam, et porta ante sagittis. Maecenas lobortis ut erat id tincidunt. Fusce hendrerit arcu id efficitur lobortis. Vestibulum finibus pulvinar fringilla. Duis ac velit et ligula finibus porttitor. Phasellus auctor augue non vulputate facilisis. Integer vel mi mollis, tristique justo in, mattis augue.Morbi ut mauris nunc. Quisque mattis maximus rutrum. In ipsum orci, congue sed facilisis ut, mattis sed nunc. Maecenas elementum tortor quam. Pellentesque ac dolor eget ante blandit viverra sed et leo. Proin non lorem non mi blandit venenatis. Donec interdum libero lacus, a hendrerit libero dictum vitae. Nam in efficitur ligula. Maecenas placerat nunc sed nisl mattis bibendum. Nunc aliquam ipsum odio</p>
+</div>
 </div>
 </div>
 <div class="section">
@@ -104,6 +114,14 @@
   </div>
 </div>
 
+<footer class="container-fluid text-center">
+  <div class="foot">
+  <p>Online Shop</p>
+  <form class="form-inline">Get Daily Updates:
+    <input type="email" class="form-control" size="50" placeholder="Email Address">
+    <button type="button" class="btn btn-danger">Sign Up</button>
+  </div>
+</footer>
 
 <footer class="container-fluid">
   <div class="row">
@@ -145,14 +163,7 @@
 </div>
 </footer>
 
-<footer class="container-fluid text-center">
-  <div class="foot">
-  <p>Online Shop</p>
-  <form class="form-inline">Get Daily Updates:
-    <input type="email" class="form-control" size="50" placeholder="Email Address">
-    <button type="button" class="btn btn-danger">Sign Up</button>
-  </div>
-</footer>
+
 
 <div class="foo3">
     <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
