Organised collumns for the items on sale

--- a/pay.html
+++ b/pay.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=divice-width">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
-  <link rel="stylesheet" href="css/elastic_grid.min.css">
+  <link rel="stylesheet" type="text/css" href="css/elastic_grid.min.css">
+  <link rel="stylesheet" type="text/css" href="css/elastic_<a href="https://www.jqueryscript.net/tags.php?/grid/">grid</a>.min.css"/>
+
   <link rel="stylesheet" href="css/pay.css">
   <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Raleway" rel="stylesheet">
 
@@ -58,13 +60,13 @@
         <!--Wrapper for slides-->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="img/shoe400.jpg">
+            <img src="images/airforce.jpg">
           </div>
           <div class="item">
-            <img src="img/shoe2400.jpg">
+            <img src="images/nikeblue.jpg">
           </div>
           <div class="item">
-            <img src="img/shoe3400.jpg">
+            <img src="images/nikered.jpg">
           </div>
 
         </div>
@@ -100,97 +102,77 @@
 
   <div class="main-gallery">
     <div class="row gallery ">
-      <h2>Special Products</h2>
-      <br>
-      <div class="col-md-3">
-        <div class="content">
-          <img src="images/nikearmyg.jpg">
-          <h3>Nike Army Green</h3>
-          <p>This is a limited edition baby!</p>
-          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
 
-        </div>
+      <div class="col-md-3">
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <div class="content">
-          <img src="images/nikearmyg.jpg">
-          <h3>Nike Army Green</h3>
-          <p>This is a limited edition baby!</p>
-          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-        </div>
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-
-        <div class="content">
-          <img src="images/nikearmyg.jpg">
-          <h3>Nike Army Green</h3>
-          <p>This is a limited edition baby!</p>
-          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-        </div>
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <div class="content">
-          <img src="images/nikearmyg.jpg">
-          <h3>Nike Army Green</h3>
-          <p>This is a limited edition baby!</p>
-          <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-        </div>
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
       </div>
 
-      <div class="row gallery">
-        <div class="col-md-3">
-          <div class="content">
-            <img src="images/nikearmyg.jpg">
-            <h3>Nike Army Green</h3>
-            <p>This is a limited edition baby!</p>
-            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-          </div>
-        </div>
-
-        <div class="col-md-3">
-
-          <div class="content">
-            <img src="images/nikearmyg.jpg">
-            <h3>Nike Army Green</h3>
-            <p>This is a limited edition baby!</p>
-            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-          </div>
-        </div>
-
-        <div class="col-md-3">
-
-          <div class="content">
-            <img src="images/nikearmyg.jpg">
-            <h3>Nike Army Green</h3>
-            <p>This is a limited edition baby!</p>
-            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-          </div>
-        </div>
-
-        <div class="col-md-3">
-
-          <div class="content">
-            <img src="images/nikearmyg.jpg">
-            <h3>Nike Army Green</h3>
-            <p>This is a limited edition baby!</p>
-            <button type="button" class="btn get-now" name="button"><span class="get-text">$124</span> GET NOW</button>
-
-          </div>
-        </div>
+      <div class="col-md-3">
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
       </div>
+
+      <div class="col-md-3">
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikered.jpg">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+      </div>
+
     </div>
   </div>
 
+  <br><br><br><br>
 
+
+  <div id="elastic_grid_demo"></div>
 
 
 
@@ -341,11 +323,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="js/modernizr.custom.js"></script>
 
-  <script src="js/classie.js"></script>
+  <script type="text/javascript" src="js/pay.js"></script>
 
-  <script type="text/javascript" src="js/elastic_grid.js"></script>
 </body>
 
 </html>
