--- a/pay.html
+++ b/pay.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
   <link rel="stylesheet" type="text/css" href="css/elastic_grid.min.css">
-  <link rel="stylesheet" type="text/css" href="css/elastic_<a href="https://www.jqueryscript.net/tags.php?/grid/">grid</a>.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://www.jqueryscript.net/tags.php?/grid.min.css">
 
   <link rel="stylesheet" href="css/pay.css">
-  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Caesar+Dressing|Alfa+Slab+One|Raleway|Quicksand" rel="stylesheet">
 
   <title>Renter</title>
 </head>
@@ -46,9 +46,10 @@
 
   </nav>
   <hr>
-  <div class="row">
+  <div id="cara" class="container-fluid">
 
-    <div class="col-md-6">
+
+
       <div id="item-carousel" class="carousel slide" data-ride="carousel">
         <!--Carousel Indicators-->
         <ol class="carousel-indicators">
@@ -60,13 +61,13 @@
         <!--Wrapper for slides-->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="images/airforce.jpg">
+            <img src="images/cara.jpg">
           </div>
           <div class="item">
-            <img src="images/nikeblue.jpg">
+            <img src="images/cara2.jpg">
           </div>
           <div class="item">
-            <img src="images/nikered.jpg">
+            <img src="images/cara3.0.jpg">
           </div>
 
         </div>
@@ -81,19 +82,6 @@
        </a>
       </div>
 
-    </div>
-
-
-    <div class="col-md-6">
-      <h2 class="item-name">Givenchy Dion&reg</h2>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
-        up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
-        Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a
-        line in section 1.10.32.</p>
-
-      <button type="button" class="btn btn-buy"><a href="#"><span>$196</span> add to Cart</a></button>
-      <button type="button" class="btn btn-buy"><a href="#">Check more</a></button>
-    </div>
 
 
   </div>
@@ -107,64 +95,107 @@
         <img src="images/nikered.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/airforce.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW <span class="glyphicon glyphicon-chevron-right"></span> </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/airjordans.jpeg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/mowabb.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/nikeblue.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/nikeRun.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/nikearmyg.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/nike27.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
       </div>
 
       <div class="col-md-3">
-        <img src="images/nikered.jpg">
+        <img src="images/nikeair.JPG">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
-        <button type="button" class="btn-get" name="button">  <span>$320</span> GET NOW </button>
+        <button type="button" class="btn get" >  <span>$320</span> GET NOW </button>
       </div>
+
+      <div class="col-md-3">
+        <img src="images/nikeair.JPG">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikeair.JPG">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikeair.JPG">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="btn get">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikeair.JPG">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="get btn">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikeair.JPG">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="get btn">  <span>$320</span> GET NOW </button>
+      </div>
+
+      <div class="col-md-3">
+        <img src="images/nikeair.JPG">
+        <h4>Nike Red Runner&reg</h4>
+        <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
+        <button type="button" class="get btn">  <span>$320</span> GET NOW </button>
+      </div>
+
 
     </div>
   </div>
