add portfolio gallery

--- a/rent.html
+++ b/rent.html
@@ -9,18 +9,102 @@
 </head>
 
 <body>
-  <div class="container" id="portgal">
-  </div>
-  <div class="container" id="product-form">
-    <div class="row" id="product-row">
-      <div class="col-xs-12 col-md-8" id="uploading-colomn">
-        <input type="file" accept="image/*" onchange="showMyImage(this)" />
-        <br/>
-        <img id="thumbnil" src="" alt="image" />
+  <div class="container-fluid">
+    <h1>MY RENTING STUFF</h1>
+    <div class="row" id="portgal">
+      <div class="column">
+        <div class="card">
+          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+
+          </div>
+        </div>
       </div>
 
-      <div class="col-xs-12 col-md-4" id="uploading-form">
-        <form id="renting-form">
+      <div class="column">
+        <div class="card">
+          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  <div class="container" id="product-form">
+    <form id="renting-form">
+      <div class="row" id="product-row">
+        <div class="col-xs-12 col-md-8" id="uploading-colomn">
+          <input type="file" accept="image/*" onchange="showMyImage(this)" />
+          <br/>
+          <img id="thumbnil" src="" alt="image" />
+        </div>
+
+        <div class="col-xs-12 col-md-4" id="uploading-form">
+
           <div class="form-group">
             <label for="product-name">Product Name<abbr title="required">*</abbr>:</label>
 
@@ -51,15 +135,15 @@
             <input type="text" class="form-group" required id="product-location">
           </div>
           <button id="renting" class="btn" type="submit">Rent Out</button>
-        </form>
-        <button id="previewing" type="button" class="btn">Preview AD</button>
+    </form>
+    <button id="previewing" type="button" class="btn">Preview AD</button>
 
-      </div>
+    </div>
     </div>
   </div>
-
-  <script src="js/rent.js"></script>
   <script src="js/jquery.js"></script>
+  <script src="js/rent.js"></script>
+
 </body>
 
 </html>
