center align images in colomns of gallery

--- a/rent.html
+++ b/rent.html
@@ -14,7 +14,7 @@
     <div class="row" id="portgal">
       <div class="column">
         <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
@@ -28,7 +28,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
@@ -41,7 +41,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
@@ -54,7 +54,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
@@ -67,7 +67,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <img src="images/homepage.jpg" alt="Mike" style="width:90%;">
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
@@ -80,7 +80,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:100%">
+          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
