--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <ul class="active nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li class="active"><a href="rent.html">Rent a Shoe</a></li>
-        <li class="active"><a href="borrow.html">Borrow a Shoe</a></li>
+        <li class="active"><a href="pay.html">Borrow a Shoe</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#"><span class="glyphicon glyphicon-user"></span> User Account</a></li>
+        <li class="active"><a href="pay.html"><span class="glyphicon glyphicon-user"></span> User Account</a></li>
         <li class="active"><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
       </ul>
     </div>
@@ -48,14 +48,31 @@
             <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
         </ol>
+
         <div class="carousel-inner">
             <div class="item active">
-                <img src="images/shoe1.jpeg" alt="Rent Shoe">
+                <img src="images/shoe3.jpeg" alt="Rent Shoe">
                 <div class="carousel-caption">
-                  <h3>Men's Shoe</h3>
+                  <h3>Shoe</h3>
                   <p>Rent a Shoe is always so much fun!!</p>
                 </div>
               </div>
+
+              <div class="item">
+                  <img src="images/shoe6.jpeg" alt="Rent Shoe">
+                  <div class="carousel-caption">
+                    <h3>Shoe</h3>
+                    <p>Rent a Shoe is always so much fun!!</p>
+                  </div>
+                </div>
+
+                  <div class="item">
+                      <img src="images/shoe5.jpeg" alt="Rent Shoe">
+                      <div class="carousel-caption">
+                        <h3>Shoe</h3>
+                        <p>Rent a Shoe is always so much fun!!</p>
+                      </div>
+                </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
@@ -117,9 +134,10 @@
 <footer class="container-fluid text-center">
   <div class="foot">
   <p>Online Shop</p>
-  <form class="form-inline">Get Daily Updates:
-    <input type="email" class="form-control" size="50" placeholder="Email Address">
-    <button type="button" class="btn btn-danger">Sign Up</button>
+  <form class="form-inline" id="form1">
+    <label for="email"> Get Daily Updates:</label>
+    <input type="email" class="form-control" size="40" placeholder="Email Address" id="email">
+    <button type="button" class="btn btn-danger" id="submit">Sign Up</button>
   </div>
 </footer>
 
@@ -169,5 +187,7 @@
     <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
   </div>
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
